# realtime-ai-inference-platform

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: batch_predict.json  predict.json
scripts/: log_mlflow_model.py
src/realtime_ai_platform/: __init__.py  app.py  metrics.py  model.py  model_loader.py  schemas.py  service.py
tests/: test_app.py  test_metrics.py  test_model.py  test_model_loader.py
