[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "realtime-ai-inference-platform"
version = "0.1.0"
description = "Reference FastAPI platform for real-time AI inference, metrics, and deployment."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Hanjie Shen", email = "shenhanjie0418@gmail.com" }]
keywords = ["ai", "inference", "fastapi", "mlops", "realtime", "monitoring"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "fastapi>=0.115",
  "pydantic>=2.7",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.0",
  "ruff>=0.5",
]
mlflow = [
  "mlflow>=2.14",
  "pandas>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/realtime_ai_platform"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
